Quorum3/Library/Tests/IfStatement/Pass/MultipleIfElseBlocks_2ATrue.quorum
class Main 
    action Main
        integer result = 0
        integer testVariable = 2
        text path = "A"
        boolean times10 = true
        if testVariable = 1
            result = 10
            if path = "A"
                result = result + 1
                if times10 = true
                    result = result * 10
                else
                    result = result + 100
                end
            else
                result = result + 2
                if times10 = true
                    result = result * 10
                else
                    result = result + 100
                end
            end
        elseif testVariable = 2
            result = 20
            if path = "A"
                result = result + 1
                if times10 = true
                    result = result * 10
                else
                    result = result + 100
                end
            else
                result = result + 2
                if times10 = true
                    result = result * 10
                else
                    result = result + 100
                end
            end
        elseif testVariable > 10
            result = 30
            if path = "A"
                result = result + 1
                if times10 = true
                    result = result * 10
                else
                    result = result + 100
                end
            else
                result = result + 2
                if times10 = true
                    result = result * 10
                else
                    result = result + 100
                end
            end
        else
            result = 50
            if path = "A"
                result = result + 1
                if times10 = true
                    result = result * 10
                else
                    result = result + 100
                end
            else
                result = result + 2
                if times10 = true
                    result = result * 10
                else
                    result = result + 100
                end
            end
        end
    end
end