Quorum3/Library/Tests/IfStatement/Fail/IfStatementText().quorum
class Main
    action Main
        integer result = 0
        text a = "true"

        if a
            result = 1
        else
            result = 2
        end

        output result
    end
end